# GeometryCalculator

./: .gitignore  README.md  classes.py  main-console.py  main.py  pyproject.toml  read.py  requirements.txt
.github/workflows/: package-linux.yml  package-macos.yml  package-win.yml  python-building.yml  python-pytest.yml
interfaces/: __init__.py  interface_add.py  interface_solve.py  ui_add.py  ui_add.ui  ui_solve.py  ui_solve.ui
tests/: __init__.py  test_read.py
